fixed testimonial button overlap bug for mobile

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3232,5 +3232,7 @@ a img.aligncenter {
   padding-left: 12%;
 }
 
-
+.owl-unica .owl-pagination .owl-page {
+  margin-bottom: 20px;
+}
 
